# goit-python-web-hw-08

part1/: models.py  pyproject.toml  search_script.py  seed.py
part2/: config.ini  consumer.py  models.py  producer.py  pyproject.toml
